build/apps/hass/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        task: home-assistant
    spec:
      volumes:
        - name: hass-data
          persistentVolumeClaim:
            claimName: pvc-hass-data

      #hostNetwork: true
      containers:
      - name: home-assistant
        image: "ghcr.io/home-assistant/home-assistant:2024.2.0.dev20240129"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: null
        ports:
          - containerPort: 8123
            name: home-assistant
            protocol: TCP

        volumeMounts:
          - name: hass-data
            mountPath: /config
            readOnly: false
      restartPolicy: Always


        # livenessProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 3
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        # readinessProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 3
        #   timeoutSeconds: 1
        #   periodSeconds: 10
        # startupProbe:
        #   tcpSocket:
        #     port: 8123
        #   initialDelaySeconds: 0
        #   failureThreshold: 30
        #   timeoutSeconds: 1
        #   periodSeconds: 5



      #     env:
      #       - name: TZ
      #         valueFrom:
      #           configMapKeyRef:
      #             name: homeassistant-env
      #             key: TZ
      #     volumeMounts:
      #       - name: homeassistant-data-volume
      #         mountPath: /config
      # volumes:
      #   - name: homeassistant-data-volume
      #     persistentVolumeClaim:
      #       claimName: pvc-nfs-kubedata-homeassistant-data


      #     env:
      #       - name: TZ
      #         value: "${TIMEZONE}"
      #     volumeMounts:
      #       - mountPath: /config
      #         name: home-assistant-content
      # volumes:
      #   - name: home-assistant-content
      #     persistentVolumeClaim:
      #       claimName: home-assistant-claim




      



          # resources:
          #   requests:
          #     memory: "128Mi"
          #     cpu: "100m"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"
