build/apps/hass/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: home-assistant

spec:
  ports:
    - protocol: TCP
      name: home-assistant
      port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
    task: home-assistant
  type: ClusterIP



# spec:
#   type: LoadBalancer
#   loadBalancerIP: 192.168.40.4
#   ports:
#     - port: 443
#       name: hassio-gui-api
#       targetPort: 8123

  # annotations:
  #   metallb.universe.tf/loadBalancerIPs: 10.0.3.25

  # type: LoadBalancer
